@@ -1,20 +1,21 @@
 package mate.academy.spring.controller;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import mate.academy.spring.dto.UserResponseDto;
 import mate.academy.spring.mapper.UserDtoMapper;
 import mate.academy.spring.model.User;
 import mate.academy.spring.service.UserService;
-import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 
-@Controller
+@RestController
 @RequestMapping("/users")
 public class UserController {
-    private UserService userService;
-    private UserDtoMapper userDtoMapper;
+    private final UserService userService;
+    private final UserDtoMapper userDtoMapper;
 
     public UserController(UserService userService, UserDtoMapper userDtoMapper) {
         this.userService = userService;
@@ -28,16 +29,29 @@ public class UserController {
 
     @GetMapping()
     public List<UserResponseDto> getAll() {
-        return userService.getAll().stream().map(userDtoMapper::parse).toList();
+        return userService.getAll().stream()
+                .map(userDtoMapper::parse)
+                .collect(Collectors.toList());
     }
 
     @GetMapping("/inject")
     public String injectMockData() {
-        List<User> users = List.of(
-                new User("John", "Doe"),
-                new User("Emily", "Stone"),
-                new User("Hugh", "Dane"));
-        users.forEach(userService::add);
+        User john = new User();
+        john.setFirstName("John");
+        john.setLastName("Doe");
+
+        User emily = new User();
+        emily.setFirstName("Emily");
+        emily.setLastName("Stone");
+
+        User huge = new User();
+        huge.setFirstName("Hugh");
+        huge.setLastName("Dane");
+
+        userService.add(john);
+        userService.add(emily);
+        userService.add(huge);
+
         return "Users are injected!";
     }
 }
